Tri 1/COMP_102/Assignements/Assignment 1/CalculatorExercise/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Users\niels\Downloads\ecs100.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\niels\Downloads\CalculatorExercise
-d
C:\Users\niels\Downloads\CalculatorExercise\doc
-encoding
US-ASCII
-charset
US-ASCII
C:\Users\niels\Downloads\CalculatorExercise\CalculatorExercise.java
<---- end of javadoc command ---->
Loading source file C:\Users\niels\Downloads\CalculatorExercise\CalculatorExercise.java...
Constructing Javadoc information...
C:\Users\niels\Downloads\CalculatorExercise\CalculatorExercise.java:11: error: package ecs100 does not exist
import ecs100.*;
^
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating C:\Users\niels\Downloads\CalculatorExercise\doc\CalculatorExercise.html...
Generating C:\Users\niels\Downloads\CalculatorExercise\doc\package-frame.html...
Generating C:\Users\niels\Downloads\CalculatorExercise\doc\package-summary.html...
Generating C:\Users\niels\Downloads\CalculatorExercise\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\niels\Downloads\CalculatorExercise\doc\allclasses-frame.html...
Generating C:\Users\niels\Downloads\CalculatorExercise\doc\allclasses-noframe.html...
Generating C:\Users\niels\Downloads\CalculatorExercise\doc\index.html...
1 warning
